#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([libmm.a], [1.0], [kangs.uestc@gmail.com])
AM_INIT_AUTOMAKE(libmm.a, 1.0)
AC_CONFIG_SRCDIR([./])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_CC_C_O

# Checks for libraries.

# Checks for header files.
#AC_CHECK_HEADERS([malloc.h stdint.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_C_INLINE
#AC_TYPE_SIZE_T
#AC_TYPE_UINT32_T
#AC_TYPE_UINT64_T

# Checks for library functions.
#AC_FUNC_MALLOC
#AC_CHECK_FUNCS([memset pow strerror])

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile)
